<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".EscolhaCombustivelActivity">


    <ImageView
        android:id="@+id/imagemFundoEscolha"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background_buttom_dark_gray" />

    <ImageView
        android:id="@+id/imagemFotoEscolha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_transparente_arredondado"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imagemFundoEscolha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemLogoEcoRoadEscolha"
        app:srcCompat="@drawable/image_foto_viagem_1" />

    <ImageView
        android:id="@+id/imagemLogoEcoRoadEscolha"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_logo_ecoroad" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoGasolina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_buttom_orange"
        android:text="@string/escolha_buttom_gosolina"
        app:layout_constraintEnd_toEndOf="@+id/imagemFundoEscolha"
        app:layout_constraintStart_toStartOf="@+id/imagemFundoEscolha"
        app:layout_constraintTop_toBottomOf="@+id/textoExplicacaoEscolha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoDiesel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_buttom_orange"
        android:text="@string/escolha_buttom_diesel"
        app:layout_constraintEnd_toEndOf="@+id/imagemFundoEscolha"
        app:layout_constraintStart_toStartOf="@+id/imagemFundoEscolha"
        app:layout_constraintTop_toBottomOf="@+id/botaoGasolina" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoAlcool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_buttom_orange"
        android:text="@string/escolha_buttom_alcool"
        app:layout_constraintEnd_toEndOf="@+id/imagemFundoEscolha"
        app:layout_constraintStart_toStartOf="@+id/imagemFundoEscolha"
        app:layout_constraintTop_toBottomOf="@+id/botaoDiesel" />

    <TextView
        android:id="@+id/textoTituloEscolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/escolha_titulo"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textoExplicacaoEscolha"
        app:layout_constraintTop_toTopOf="@+id/imagemFundoEscolha" />

    <TextView
        android:id="@+id/textoExplicacaoEscolha"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/escolha_explicacao"
        app:layout_constraintEnd_toEndOf="@+id/imagemFundoEscolha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imagemFundoEscolha"
        app:layout_constraintTop_toBottomOf="@+id/textoTituloEscolha" />


</androidx.constraintlayout.widget.ConstraintLayout>